--- a/examples/cq_compile.ipynb
+++ b/examples/cq_compile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "c01de181-761d-428e-b0a2-f038d12cdb84",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "b38e6a2c-36fc-426c-a6e0-3f5167900e54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider = qiskit_superstaq.superstaq_provider.SuperstaQProvider(remote_host=\"https://127.0.0.1:5000\", api_key=\"ya29.A0ARrdaM8hzKh8iP9jWpEN5B9vzxg26jlPfzIUD5RypG349WHpqImMECQ864QVeqjhEQuTgGGIXjvjt8IrBZsUxLcstTvoCLa1KxiO6RN-Yz6PRmYTudXJ51tXfYy8Zhvp0zqRVVU35M8HBhU18uxhP2kcPBKAmQ\")"
+    "provider = qiskit_superstaq.superstaq_provider.SuperstaQProvider(api_key=\"api-key\")"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "7c88500b-8c09-43d3-8b16-0078a95a551d",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "     └───┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "8b259905-2984-4f4a-88d4-d767581685b4",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "b01be319-68f3-4aed-b9b4-4d6b10b391bc",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "     ┌─────────────────┐┌───┐┌────────────────┐\n",
-      "q_0: ┤ GR(-2.47, 4.93) ├┤ Z ├┤ GR(2.47, 4.93) ├\n",
+      "q_0: ┤ GR(-1.57, 0.79) ├┤ Z ├┤ GR(1.57, 0.79) ├\n",
       "     └─────────────────┘└───┘└────────────────┘\n"
      ]
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "6e6b56e6-92d1-4b3d-b8da-dee099286091",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "     └───┘└───┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "5d3993fd-83f1-42e9-b1e0-f4e553765682",
    "metadata": {},
    "outputs": [
@@ -160,12 +160,12 @@
     }
    ],
    "source": [
-    "compiler_output = provider.qscout_compile([circuit1, circuit2])"
+    "compiler_output = provider.cq_compile([circuit1, circuit2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "d7bdb8fb-a0d0-4fae-932a-f2fc51848f4f",
    "metadata": {},
    "outputs": [
@@ -173,15 +173,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌─────────────┐┌───┐\n",
-      "q_0: ┤ U(-π/2,0,0) ├┤ Z ├\n",
-      "     └─────────────┘└───┘\n",
+      "     ┌─────────────────┐┌───┐┌────────────────┐\n",
+      "q_0: ┤ GR(-1.57, 0.79) ├┤ Z ├┤ GR(1.57, 0.79) ├\n",
+      "     └─────────────────┘└───┘└────────────────┘\n",
       "\n",
-      "     ┌──────────────┐┌───────────┐┌─────────────┐┌──────────┐\n",
-      "q_0: ┤ U(-π/2,π,-π) ├┤0          ├┤ U(-π/2,0,0) ├┤ Rz(-π/2) ├\n",
-      "     └──────────────┘│  Rxx(π/2) │├─────────────┤├─────────┬┘\n",
-      "q_1: ────────────────┤1          ├┤ U(-π/2,0,0) ├┤ Rz(π/2) ├─\n",
-      "                     └───────────┘└─────────────┘└─────────┘ \n"
+      "     ┌──────────────────┐     ┌─────────────────┐   \n",
+      "q_0: ┤0                 ├─────┤0                ├─■─\n",
+      "     │  GR(-1.57, 0.79) │┌───┐│  GR(1.57, 0.79) │ │ \n",
+      "q_1: ┤1                 ├┤ Z ├┤1                ├─■─\n",
+      "     └──────────────────┘└───┘└─────────────────┘   \n"
      ]
     }
    ],
