Respond to review

--- a/examples/cq_compile.ipynb
+++ b/examples/cq_compile.ipynb
@@ -66,15 +66,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8b259905-2984-4f4a-88d4-d767581685b4",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "/home/vtomole/venv/lib/python3.8/site-packages/urllib3/connectionpool.py:1013: InsecureRequestWarning: Unverified HTTPS request is being made to host '127.0.0.1'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -153,10 +152,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "/home/vtomole/venv/lib/python3.8/site-packages/urllib3/connectionpool.py:1013: InsecureRequestWarning: Unverified HTTPS request is being made to host '127.0.0.1'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
+     "text": []
     }
    ],
    "source": [
