--- a/examples/uchicago_workshop.ipynb
+++ b/examples/uchicago_workshop.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "1791b589",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "e0ccba05-94c6-426f-af52-c95fd5fca5d4",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1c99cced",
+   "id": "7e919445",
    "metadata": {},
    "outputs": [
     {
@@ -97,27 +97,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "57e19db4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.18.3'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qiskit.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "db45d0dc",
    "metadata": {},
@@ -128,18 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3c2c2054",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# backend = superstaq_provider.get_backend(\"ibmq_bogota\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
-   "id": "ca077d32",
+   "id": "ac862465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,37 +140,6 @@
     "qc.swap(0, 1)\n",
     "qc.measure([0, 1], [0, 1])\n",
     "print(qc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "16143d4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# qc = qiskit.QuantumCircuit(2, 2)\n",
-    "# qc.x(0)\n",
-    "# qc.measure_all()\n",
-    "# print(qc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "1d8bdd79",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<IBMQBackend('ibmq_jakarta') from IBMQ(hub='ibm-q-startup', group='super-tech-labs', project='reservations')>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(repr(backend))"
    ]
   },
   {
@@ -260,40 +198,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "edce8624",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting matplotlib\n",
-      "  Using cached matplotlib-3.5.1-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.whl (11.3 MB)\n",
-      "Collecting fonttools>=4.22.0\n",
-      "  Using cached fonttools-4.29.0-py3-none-any.whl (895 kB)\n",
-      "Collecting pillow>=6.2.0\n",
-      "  Using cached Pillow-9.0.0-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.3 MB)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /home/dowusu/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages (from matplotlib) (3.0.7)\n",
-      "Collecting cycler>=0.10\n",
-      "  Using cached cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/dowusu/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages (from matplotlib) (1.22.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/dowusu/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/dowusu/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages (from matplotlib) (2.8.2)\n",
-      "Collecting kiwisolver>=1.0.1\n",
-      "  Using cached kiwisolver-1.3.2-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.whl (1.2 MB)\n",
-      "Requirement already satisfied: six>=1.5 in /home/dowusu/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Installing collected packages: pillow, kiwisolver, fonttools, cycler, matplotlib\n",
-      "Successfully installed cycler-0.11.0 fonttools-4.29.0 kiwisolver-1.3.2 matplotlib-3.5.1 pillow-9.0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "id": "1bf4d4fb",
    "metadata": {},
@@ -316,47 +220,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "6ca93fac-11bb-428e-a222-02661a0f4b0f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SuperstaQException",
-     "evalue": "Status code: 400, Message: 'Non-retriable error making request to SuperstaQ API, Your balance, -753.5849999999994, is negative. Contact info@super.tech'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSuperstaQException\u001b[0m                        Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pulse_schedule_optimized \u001b[38;5;241m=\u001b[39m \u001b[43msuperstaq_provider\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mibmq_compile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mibmq_jakarta_qpu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[1;32m      2\u001b[0m pulse_schedule_optimized\u001b[38;5;241m.\u001b[39mdraw()\n",
-      "File \u001b[0;32m~/super.tech/repositories/qiskit-superstaq/qiskit_superstaq/superstaq_provider.py:162\u001b[0m, in \u001b[0;36mSuperstaQProvider.ibmq_compile\u001b[0;34m(self, circuits, target)\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;124;03m\"\"\"Returns pulse schedule(s) for the given circuit(s) and target.\"\"\"\u001b[39;00m\n\u001b[1;32m    160\u001b[0m serialized_circuits \u001b[38;5;241m=\u001b[39m qss\u001b[38;5;241m.\u001b[39mserialization\u001b[38;5;241m.\u001b[39mserialize_circuits(circuits)\n\u001b[0;32m--> 162\u001b[0m json_dict \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mibmq_compile\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    163\u001b[0m \u001b[43m    \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mqiskit_circuits\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mserialized_circuits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbackend\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m}\u001b[49m\n\u001b[1;32m    164\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    166\u001b[0m pulses \u001b[38;5;241m=\u001b[39m applications_superstaq\u001b[38;5;241m.\u001b[39mconverters\u001b[38;5;241m.\u001b[39mdeserialize(json_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpulses\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m    167\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(circuits, qiskit\u001b[38;5;241m.\u001b[39mQuantumCircuit):\n",
-      "File \u001b[0;32m~/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages/applications_superstaq/superstaq_client.py:220\u001b[0m, in \u001b[0;36m_SuperstaQClient.ibmq_compile\u001b[0;34m(self, json_dict)\u001b[0m\n\u001b[1;32m    218\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mibmq_compile\u001b[39m(\u001b[38;5;28mself\u001b[39m, json_dict: Dict[\u001b[38;5;28mstr\u001b[39m, Union[\u001b[38;5;28mstr\u001b[39m, List[\u001b[38;5;28mstr\u001b[39m]]]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n\u001b[1;32m    219\u001b[0m     \u001b[38;5;124;03m\"\"\"Makes a POST request to SuperstaQ API to compile a circuits for IBM devices.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 220\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpost_request\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/ibmq_compile\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjson_dict\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages/applications_superstaq/superstaq_client.py:120\u001b[0m, in \u001b[0;36m_SuperstaQClient.post_request\u001b[0;34m(self, endpoint, json_dict)\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrequest\u001b[39m() \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m requests\u001b[38;5;241m.\u001b[39mResponse:\n\u001b[1;32m    113\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m requests\u001b[38;5;241m.\u001b[39mpost(\n\u001b[1;32m    114\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mendpoint\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    115\u001b[0m         json\u001b[38;5;241m=\u001b[39mjson_dict,\n\u001b[1;32m    116\u001b[0m         headers\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheaders,\n\u001b[1;32m    117\u001b[0m         verify\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mverify_https,\n\u001b[1;32m    118\u001b[0m     )\n\u001b[0;32m--> 120\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_request\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mjson()\n",
-      "File \u001b[0;32m~/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages/applications_superstaq/superstaq_client.py:313\u001b[0m, in \u001b[0;36m_SuperstaQClient._make_request\u001b[0;34m(self, request)\u001b[0m\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m response\u001b[38;5;241m.\u001b[39mok:\n\u001b[1;32m    311\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m response\n\u001b[0;32m--> 313\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_handle_status_codes\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    314\u001b[0m     message \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mreason\n\u001b[1;32m    316\u001b[0m \u001b[38;5;66;03m# Fallthrough should retry.\u001b[39;00m\n",
-      "File \u001b[0;32m~/super.tech/venvs/new-qss-venv/lib/python3.8/site-packages/applications_superstaq/superstaq_client.py:287\u001b[0m, in \u001b[0;36m_SuperstaQClient._handle_status_codes\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    285\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    286\u001b[0m         message \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(response\u001b[38;5;241m.\u001b[39mtext)\n\u001b[0;32m--> 287\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m applications_superstaq\u001b[38;5;241m.\u001b[39mSuperstaQException(\n\u001b[1;32m    288\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNon-retriable error making request to SuperstaQ API, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmessage\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    289\u001b[0m     response\u001b[38;5;241m.\u001b[39mstatus_code,\n\u001b[1;32m    290\u001b[0m )\n",
-      "\u001b[0;31mSuperstaQException\u001b[0m: Status code: 400, Message: 'Non-retriable error making request to SuperstaQ API, Your balance, -753.5849999999994, is negative. Contact info@super.tech'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pulse_schedule_optimized = superstaq_provider.ibmq_compile(qc, target=\"ibmq_jakarta_qpu\")\n",
+    "pulse_schedule_optimized = superstaq_provider.ibmq_compile(qc, target=\"ibmq_jakarta_qpu\") \n",
     "pulse_schedule_optimized.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "id": "4a1ef756-57a4-43f9-88e7-d2dc9079a027",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vtomole/qiskit_superstaq_env/lib/python3.8/site-packages/qiskit/compiler/assembler.py:450: RuntimeWarning: Dynamic rep rates are supported on this backend. 'rep_delay' will be used instead of 'rep_time'.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "job1 = qiskit.execute(pulse_schedule_standard, shots=4000, backend=backend)"
    ]
@@ -486,7 +364,7 @@
     "    While both gates are possible on any connected qubit pairs, one orientation is faster\n",
     "    than the other since the cross-resonance is directional.\n",
     "    \"\"\"\n",
-    "    return ism.get(\"cx\", qubits=[i, j]).duration < ism.get(\"cx\", qubits=[j, i]).duration"
+    "    return ism.get(\"cx\", qubits=[i, j]).duration < ism.get(\"cx\", qubits=[j, i]).duration\n"
    ]
   },
   {
@@ -517,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_cr_45p_and_45n(i: int, j: int) -> Tuple[qiskit.pulse.Schedule, qiskit.pulse.Schedule]:\n",
+    "def _get_cr_45p_and_45n(i: int, j: int)-> Tuple[qiskit.pulse.Schedule, qiskit.pulse.Schedule]:\n",
     "    \"\"\"Extracts the CR(+45) and CR(-45) pulse schedules from the schedule for CX(i, j).\n",
     "    If the CR's are oriented in the opposite direction, returns None.\n",
     "    \"\"\"\n",
