--- a/examples/uchicago_workshop.ipynb
+++ b/examples/uchicago_workshop.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "1791b589",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pulse_schedule_optimized = superstaq_provider.ibmq_compile(qc, target=\"ibmq_jakarta_qpu\") \n",
+    "pulse_schedule_optimized = superstaq_provider.ibmq_compile(qc, target=\"ibmq_jakarta_qpu\")\n",
     "pulse_schedule_optimized.draw()"
    ]
   },
@@ -364,7 +364,7 @@
     "    While both gates are possible on any connected qubit pairs, one orientation is faster\n",
     "    than the other since the cross-resonance is directional.\n",
     "    \"\"\"\n",
-    "    return ism.get(\"cx\", qubits=[i, j]).duration < ism.get(\"cx\", qubits=[j, i]).duration\n"
+    "    return ism.get(\"cx\", qubits=[i, j]).duration < ism.get(\"cx\", qubits=[j, i]).duration"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_cr_45p_and_45n(i: int, j: int)-> Tuple[qiskit.pulse.Schedule, qiskit.pulse.Schedule]:\n",
+    "def _get_cr_45p_and_45n(i: int, j: int) -> Tuple[qiskit.pulse.Schedule, qiskit.pulse.Schedule]:\n",
     "    \"\"\"Extracts the CR(+45) and CR(-45) pulse schedules from the schedule for CX(i, j).\n",
     "    If the CR's are oriented in the opposite direction, returns None.\n",
     "    \"\"\"\n",
