--- a/examples/neutral_atom_compile.ipynb
+++ b/examples/neutral_atom_compile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "38207b4d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
+   "id": "c0ca1ff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q pulser~=0.1.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "8c84adc3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b615c8b9",
    "metadata": {},
    "outputs": [
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ff18c7da",
    "metadata": {},
    "outputs": [
@@ -67,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "791e66e8",
    "metadata": {},
    "outputs": [],
@@ -82,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f83e8036",
    "metadata": {},
    "outputs": [
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "40f81181",
    "metadata": {},
    "outputs": [
@@ -121,14 +131,6 @@
    "source": [
     "_ = out[1].draw()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "218fb57a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -147,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
