--- a/examples/neutral_atom_compile.ipynb
+++ b/examples/neutral_atom_compile.ipynb
@@ -14,11 +14,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0ca1ff8",
+   "id": "a064d2cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q pulser~=0.1.1"
+    "try:\n",
+    "    import pulser\n",
+    "    install_pulser = not (\"0.1.1\" <= pulser.__version__ < \"0.2\")\n",
+    "except ImportError:\n",
+    "    install_pulser = True\n",
+    "\n",
+    "if install_pulser:\n",
+    "    print(\"installing pulser...\")\n",
+    "    !pip install -q pulser~=0.1.1\n",
+    "    print(\"installed pulser.\")"
    ]
   },
   {
