--- a/examples/neutral_atom_compile.ipynb
+++ b/examples/neutral_atom_compile.ipynb
@@ -14,19 +14,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a064d2cb",
+   "id": "864133e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    import pulser\n",
+    "\n",
     "    install_pulser = not (\"0.1.1\" <= pulser.__version__ < \"0.2\")\n",
     "except ImportError:\n",
     "    install_pulser = True\n",
     "\n",
     "if install_pulser:\n",
     "    print(\"installing pulser...\")\n",
-    "    !pip install -q pulser~=0.1.1\n",
+    "    !pip install -qq pulser~=0.1.1\n",
     "    print(\"installed pulser.\")"
    ]
   },
