Remove `;` after callling `.draw()`

--- a/examples/ibmq_compile.ipynb
+++ b/examples/ibmq_compile.ipynb
@@ -69,7 +69,7 @@
    ],
    "source": [
     "out = provider.ibmq_compile(qc, target=\"ibmq_bogota_qpu\")\n",
-    "out.circuits.draw();"
+    "out.circuits.draw()"
    ]
   },
   {
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "out.circuits[0].draw();"
+    "out.circuits[0].draw()"
    ]
   },
   {
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "out.circuits[1].draw();"
+    "out.circuits[1].draw()"
    ]
   }
  ],
