--- a/examples/aqt_compile.ipynb
+++ b/examples/aqt_compile.ipynb
@@ -41,8 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = os.getcwd()\n",
-    "provider.aqt_get_configs(\"Pulses.yaml\", \"Variables.yaml\")"
+    "provider.aqt_save_configs(\"Pulses.yaml\", \"Variables.yaml\")"
    ]
   },
   {
