renamed save_configs, consistency with download_configs

--- a/examples/aqt_compile.ipynb
+++ b/examples/aqt_compile.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider.aqt_save_configs(\"Pulses.yaml\", \"Variables.yaml\")"
+    "provider.aqt_download_configs(\"Pulses.yaml\", \"Variables.yaml\")"
    ]
   },
   {
