qiskit_superstaq to qss

--- a/examples/aqt_compile.ipynb
+++ b/examples/aqt_compile.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "import qiskit_superstaq"
+    "import qiskit_superstaq as qss"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider = qiskit_superstaq.superstaq_provider.SuperstaQProvider(api_key=\"YOUR API KEY\")"
+    "provider = qss.superstaq_provider.SuperstaQProvider(api_key=\"YOUR API KEY\")"
    ]
   },
   {
@@ -465,7 +465,7 @@
    ],
    "source": [
     "circuit3 = qiskit.QuantumCircuit(8)\n",
-    "circuit3.append(qiskit_superstaq.AQTiToffoliGate(), [4, 6, 5])\n",
+    "circuit3.append(qss.AQTiToffoliGate(), [4, 6, 5])\n",
     "circuit3.draw(fold=-1)"
    ]
   },
