--- a/examples/cq_compile.ipynb
+++ b/examples/cq_compile.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "import qiskit_superstaq"
+    "import qiskit_superstaq as qss"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider = qiskit_superstaq.superstaq_provider.SuperstaQProvider(api_key=\"api-key\")"
+    "provider = qss.superstaq_provider.SuperstaQProvider(api_key=\"api-key\")"
    ]
   },
   {
