--- a/examples/qscout_compile.ipynb
+++ b/examples/qscout_compile.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "import qiskit_superstaq"
+    "import qiskit_superstaq as qss"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider = qiskit_superstaq.superstaq_provider.SuperstaQProvider(access_token=\"insert-token\")"
+    "provider = qss.superstaq_provider.SuperstaQProvider(access_token=\"insert-token\")"
    ]
   },
   {
@@ -261,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
