--- a/examples/neutral_atom_compile.ipynb
+++ b/examples/neutral_atom_compile.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import qiskit\n",
-    "from qiskit_superstaq import superstaq_provider"
+    "import qiskit_superstaq as qss"
    ]
   },
   {
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider = superstaq_provider.SuperstaQProvider(api_key=\"YOUR API KEY\")"
+    "provider = qss.superstaq_provider.SuperstaQProvider(api_key=\"YOUR API KEY\")"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
