--- a/examples/qedc_deutsch_jozsa_execution.ipynb
+++ b/examples/qedc_deutsch_jozsa_execution.ipynb
@@ -265,23 +265,23 @@
     "    metrics.init_metrics()\n",
     "\n",
     "    # Define custom result handler\n",
-    "#     def execution_handler(qc, result, num_qubits, type, num_shots):\n",
+    "    #     def execution_handler(qc, result, num_qubits, type, num_shots):\n",
     "\n",
-    "#         # determine fidelity of result set\n",
-    "#         num_qubits = int(num_qubits)\n",
-    "#         counts, fidelity = analyze_and_print_result(qc, result, num_qubits, int(type), num_shots)\n",
-    "#         metrics.store_metric(num_qubits, type, \"fidelity\", fidelity)\n",
+    "    #         # determine fidelity of result set\n",
+    "    #         num_qubits = int(num_qubits)\n",
+    "    #         counts, fidelity = analyze_and_print_result(qc, result, num_qubits, int(type), num_shots)\n",
+    "    #         metrics.store_metric(num_qubits, type, \"fidelity\", fidelity)\n",
     "\n",
-    "#     # Initialize execution module using the execution result handler above and specified backend_id\n",
-    "#     ex.init_execution(execution_handler)\n",
-    "#     ex.set_execution_target(\n",
-    "#         backend_id,\n",
-    "#         provider_backend=provider_backend,\n",
-    "#         hub=hub,\n",
-    "#         group=group,\n",
-    "#         project=project,\n",
-    "#         exec_options=exec_options,\n",
-    "#     )\n",
+    "    #     # Initialize execution module using the execution result handler above and specified backend_id\n",
+    "    #     ex.init_execution(execution_handler)\n",
+    "    #     ex.set_execution_target(\n",
+    "    #         backend_id,\n",
+    "    #         provider_backend=provider_backend,\n",
+    "    #         hub=hub,\n",
+    "    #         group=group,\n",
+    "    #         project=project,\n",
+    "    #         exec_options=exec_options,\n",
+    "    #     )\n",
     "\n",
     "    # Execute Benchmark Program N times for multiple circuit sizes\n",
     "    # Accumulate metrics asynchronously as circuits complete\n",
@@ -304,9 +304,9 @@
     "\n",
     "            # collapse the sub-circuit levels used in this benchmark (for qiskit)\n",
     "            qc2 = qc.decompose()\n",
-    "            \n",
+    "\n",
     "            job = backend.run(qc2, shots=100)\n",
-    "            \n",
+    "\n",
     "            print(job.status().value)\n",
     "\n",
     "            # Get result of job\n",
@@ -315,13 +315,13 @@
     "            # Print job counts\n",
     "            print(result.get_counts())\n",
     "            # submit circuit for execution on target (simulator, cloud simulator, or hardware)\n",
-    "            #ex.submit_circuit(qc2, num_qubits, type, num_shots)\n",
+    "            # ex.submit_circuit(qc2, num_qubits, type, num_shots)\n",
     "\n",
     "        # Wait for some active circuits to complete; report metrics when groups complete\n",
-    "        #ex.throttle_execution(metrics.finalize_group)\n",
+    "        # ex.throttle_execution(metrics.finalize_group)\n",
     "\n",
     "    # Wait for all active circuits to complete; report metrics when groups complete\n",
-    "    #ex.finalize_execution(metrics.finalize_group)\n",
+    "    # ex.finalize_execution(metrics.finalize_group)\n",
     "\n",
     "    # print a sample circuit\n",
     "    print(\"Sample Circuit:\")\n",
@@ -332,7 +332,7 @@
     "    print(B_ORACLE_ if B_ORACLE_ != None else \" ... too large or not used!\")\n",
     "\n",
     "    # Plot metrics for all circuit sizes\n",
-    "    #metrics.plot_metrics(\"Benchmark Results - Deutsch-Jozsa - Qiskit\")"
+    "    # metrics.plot_metrics(\"Benchmark Results - Deutsch-Jozsa - Qiskit\")"
    ]
   },
   {
@@ -451,9 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Get job status\n"
+    "# Get job status"
    ]
   }
  ],
