Replace running on bogota to running on jakarta

--- a/examples/ibmq_compile.ipynb
+++ b/examples/ibmq_compile.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = provider.ibmq_compile(qc, target=\"ibmq_bogota_qpu\")"
+    "out = provider.ibmq_compile(qc, target=\"ibmq_jakarta_qpu\")"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "qc0.append(qss.custom_gates.AceCR(\"+-\"), [1, 0])\n",
     "qc1.append(qss.custom_gates.AceCR(\"-+\", np.pi / 2), [1, 0])\n",
     "\n",
-    "out = provider.ibmq_compile([qc0, qc1], target=\"ibmq_bogota_qpu\")"
+    "out = provider.ibmq_compile([qc0, qc1], target=\"ibmq_jakarta_qpu\")"
    ]
   },
   {
