--- a/examples/resource_estimate.ipynb
+++ b/examples/resource_estimate.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "# Connect to SuperstaQ\n",
     "superstaq = qss.superstaq_provider.SuperstaQProvider(\n",
-    "    'YOUR API KEY',\n",
+    "    \"YOUR API KEY\",\n",
     "    remote_host=qss.API_URL,\n",
     ")"
    ]
@@ -315,7 +315,7 @@
     "circuits = [\n",
     "    random_circuit(2, 2, measure=True),\n",
     "    random_circuit(3, 3, measure=True),\n",
-    "    random_circuit(4, 4, measure=True)\n",
+    "    random_circuit(4, 4, measure=True),\n",
     "]\n",
     "for c in circuits:\n",
     "    print(c)"
