updated filed in check, dev_tools, and examples

--- a/examples/resource_estimate.ipynb
+++ b/examples/resource_estimate.ipynb
@@ -10,7 +10,7 @@
     "import qiskit\n",
     "import qiskit_superstaq as qss\n",
     "\n",
-    "from applications_superstaq import ResourceEstimate\n",
+    "from general_superstaq import ResourceEstimate\n",
     "from qiskit.circuit.random import random_circuit"
    ]
   },
